# api_models_connect_V2

./: .gitignore  1-git-push-auto.bat  LICENSE  Makefile  README.md  check_auto.py  check_interactive.py  main.py  pyproject.toml  requirements.txt  run_cli.py  run_web.py
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.kiro/steering/: environment.md
backend/: Makefile  README.md  pyproject.toml  requirements.txt  run_api.py  run_cli.py
backend/config/: task_history.json
backend/config/prompts/: fast.yml  receipt_invoice.yml
backend/scripts/: check_auto.py  check_interactive.py
backend/src/backend/: __main__.py  app.py  run.py  state.py  util.py
backend/src/backend/core/: __init__.py  cli.py  config.py  config_loader.py  processor.py
backend/src/backend/core/local/: __init__.py  api_client.py  cloud_processor.py  image_utils.py
backend/src/backend/routes/: __init__.py  history.py  prompts.py  providers.py  system.py  tasks.py
backend/src/backend/services/: __init__.py  config_service.py
backend/tests/: __init__.py  check_cloud.py  check_local.py  check_project.py  quick_check.py  test_all.py  test_streaming.py
backend/tests/checkers/: __init__.py  api.py  cloud_checker.py  deps.py  env.py  local_checker.py  local_ui.py
backend/tests/fixers/: __init__.py  base.py
config/: models.yml
config/prompts/: default.yml  document_ocr.yml  product_analysis.yml  test_prompt.yml
docs/: CONTRIBUTING.md  INPUT_OUTPUT_SPECIFICATION.md  PROJECT_IMPROVEMENT_SUGGESTIONS.md  PROJECT_STATUS.md  README.md  SYSTEM_CHECK_REPORT.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/design-system/api-models-connect/: MASTER.md
frontend/design-system/api-models-connect/pages/: landing.md
frontend/src/: style.css
frontend/src/components/: QuickRunner.vue  RealtimeViz.vue
frontend/src/layouts/: AppShell.vue
frontend/src/pages/: Dashboard.vue  History.vue  Landing.vue  Models.vue  Prompts.vue  Run.vue  Settings.vue  TaskRunner.vue
frontend/src/router/: index.ts
src/: cli.py  config.py  config_loader.py  processor.py
src/local/: __init__.py  cloud_processor.py  image_utils.py  result_handler.py
tests/: check_cloud.py  check_local.py  check_project.py  cleanup.py  quick_check.py  test_all.py  test_streaming.py
tests/checkers/: base.py  cloud_checker.py  deps.py  env.py  local_checker.py  local_ui.py  paths.py
tests/fixers/: config.py  deps.py  env.py
web/: __init__.py  app.py  ui_components.py
web/services/: config_service.py
